@@ -103,6 +103,8 @@ void Bit_op::decode(Processor *new_cpu, unsigned int new_opcode)
 	case  _P18C252_:
 	case  _P18C442_:
 	case  _P18C452_:
+	case  _P18F242_:
+	case  _P18F252_:
 	case  _P18F442_:
 	case  _P18F248_:
 	case  _P18F452_:
