@@ -88,8 +88,10 @@ enum PROCESSOR_TYPE
   _P18Cxx2_,
   _P18C2x2_,
   _P18C242_,
+  _P18F242_,
   _P18F248_,
   _P18C252_,
+  _P18F252_,
   _P18C442_,
   _P18C452_,
   _P18F442_,
