@@ -1,3 +1,9 @@
+2004-05-12  Manuel Bouyer <bouyer@antioche.eu.org>
+	* src/16bit-instructions.cc, src/p18x.cc, src/p18x.h, src/pic-instructions.cc,
+	 src/pic-processor.cc, src/pic-processor.h: Fix usart problems in 18x devices.
+	* src/pir.cc, src/pir.h, src/uart.cc, src/uart.h: Fix usart bugs.
+	(Changes were submitted as a patch and applied by Scott).
+	
 2004-05-15 Scott Dattalo <scott@dattalo.com>
 	* src/xref.h, xref.cc: added get_value() member function to XrefObject class
 	* gui/gui.h, gui/gui_break.cc, gui/gui_main.cc, gui/gui_processor.cc,
